...
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#ffffff"
            tools:text="Radetzkystraße"/>

        <Button
            android:id="@+id/btnSolution"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvStreetName"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="16dp"
            android:text="@string/button_solution"
            android:textColor="@color/semiWhite"/>

        <Button
            android:id="@+id/btnNext"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvStreetName"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
...
