...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:text="@string/starter_btn_privacy_legal"/>

        <Button
            android:id="@+id/btnStart"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starter_btn_accept"/>

    </LinearLayout>
...
